# hub-permissions

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  build-upload-manual.sh  clean-schema.py  docker-compose.yml  namespaces.keto.ts  schema.graphql
.github/workflows/: cargo.yml  cargo_test.yml  keto_release.yml  keto_test.yml  main.yml  opa.yml  opa_release.yml  post.yml  release.yml  test.yml
.regal/: config.yaml
app/: Cargo.toml  proto.toml
app/src/: events.rs  lib.rs  main.rs
config/: keto.yml
policies/: data.json  data.yaml
policies/graphql/: data.json  lib.rego  main.rego
policies/system/: masking.rego
policies/utils/: helpers.rego  keto.rego
test/: config.yaml  readme.md  requirements.txt  run.py
